# dclist

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  dockercompose.rs  error.rs  fzf.rs  lib.rs  main.rs
testdata/: config-bad-format.toml  config-no-default.toml  config-unparsable-command.toml  config.toml  containers.json  docker-compose-mock  fzf-failing-mock  fzf-mock  fzf-mock-with-config
