[package]
name = "dclist"
version = "0.1.0"
edition = "2021"
description = "a fuzzy finder to open any docker-compose exposed service."

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
