[package]
name = "fzf-dclist"
version = "0.1.0"
edition = "2021"
description = "a fuzzy finder to print commands to run on any docker-compose exposed service."

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
