[package]
name = "fzf-dclist"
version = "0.1.0"
edition = "2021"
description = '''a fuzzy finder to print commands to run on any docker-compose exposed service.

In order to customize the command to print, a config file can be provided to the CLI:

  # file:config.toml
  # available variable are:
  # - {{exposed_port}}: the docker-compose service port exposed to the host

  # default command to use if nothing else matches
  command = "open http://localhost:{{exposed_port}}"

  # command to use for all my-service services if nothing more specific matches
  [services.my-service]
  command = "my-specific-command localhost {{exposed_port}}"

  # command to use for all my-service services running on internal port 8080
  [services.my-service.ports.8080]
  command = "more-specific-command localhost {{exposed_port}}"
'''

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
handlebars = "4.3.6"
itertools = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.5"
